--- a/frontend-portal/company-portal/package.json
+++ b/frontend-portal/company-portal/package.json
@@ -20,11 +20,13 @@
     "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
 }
